--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -1,6 +1,6 @@
 /**************************************************************************************************
-    
-    Font definitions 
+
+    Font definitions
 
 **************************************************************************************************/
 
@@ -14,22 +14,63 @@
 }
 
 /**************************************************************************************************
-    
+
     Base styles
-    
+
 **************************************************************************************************/
+
+.wrapper{
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.image{
+   width: 300px;
+   height: 300px;
+   display: block;
+   top: 0;
+   left: 0;
+   position: relative;
+}
+.content{
+   width: 80%;
+   height: 80%;
+   top:30px;
+   left:30px;
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   opacity: 0;
+   transition: 0.6s;
+}
+.content:hover{
+   opacity: 0.7;
+}
 
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
+    color: #fff;
     text-transform: uppercase;
-    font-family: Roboto Condensed, serif; 
-    font-weight: bold;
+    font-family: Playfair Display, serif;
+}
+
+h6,
+.h6 {
+    color: #fff;
+    text-transform: uppercase;
+    font-family: Playfair Display, serif;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a,
 a.h1, a.h2, a.h3, a.h4, a.h5 {
     color: rgba(0,0,0,0.7);
 }
+
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover,
 a.h1:hover, a.h2:hover, a.h3:hover, a.h4:hover, a.h5:hover {
     color: inherit;
@@ -37,24 +78,35 @@ a.h1:hover, a.h2:hover, a.h3:hover, a.h4:hover, a.h5:hover {
 }
 
 a {
-    color: rgba(0,0,0,0.7);
+    color: #65a8eb;
 }
 a:hover {
-    color: rgba(0,0,0,1);
+    color: #63c7bf;
     text-decoration: none;
 }
 
 body {
     background-color: transparent;
-    font-family: Lato, sans-serif; 
+    font-family: Lato, sans-serif;
     min-height: 100vh;
     font-size: 80%;
 }
 
+b {
+    text-transform: uppercase;
+    font-family: Playfair Display, serif;
+    color: #bf9c71;
+}
+
+.hr {
+    border: 1px;
+    background-colour: #63c7bf;
+}
+
 /**************************************************************************************************
-    
+
     Helpers
-    
+
 **************************************************************************************************/
 
 .hide {
@@ -67,9 +119,9 @@ body {
 }
 
 /**************************************************************************************************
-    
+
     Layout
-    
+
 **************************************************************************************************/
 
 #app {
@@ -80,6 +132,8 @@ body {
 }
 
 main {
+    background-color: #777372;
+    color: #A6A6A6;
     flex-grow: 1;
     display: flex;
 }
@@ -88,9 +142,24 @@ main > .row {
     flex-grow: 1;
 }
 
+.darkcard {
+    background-color: #0f0f0f;
+    color: #A6A6A6;
+    border-style: round;
+    padding: 5px;
+}
+
+.darkcard a {
+    color: #65a8eb;
+    margin: -3px;
+}
+.darkcard a:hover {
+    color: #63c7bf;
+    text-decoration: none;
+}
+
 .main-content {
-    background-color: white;
-    box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.1);
+    background-color: #777372;
     display: flex;
     flex-direction: column;
 }
@@ -105,7 +174,7 @@ main > .row {
 
 .navbar .navbar-brand, .navbar .nav-item {
     text-transform: uppercase;
-    font-family: Roboto Condensed, serif; 
+    font-family: Playfair Display, serif;
 }
 
 .navbar .row { width: 100%; }
@@ -113,6 +182,7 @@ main > .row {
 /* Sidebar */
 
 .sidebar {
+    background-color: #1c1c1c;
     text-align: right;
     padding-right: 0px;
 }
@@ -124,31 +194,32 @@ main > .row {
 }
 
 .sidebar ul li {
-    background-color: white;
+    background-color: #333333;
     border-top-left-radius: .25rem;
     border-bottom-left-radius: .25rem;
     margin-bottom: 1em;
     padding: 0.4em 0;
-    
+
     box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.1);
 }
 
 .sidebar .sidebar-header,
 .sidebar .sidebar-section .sidebar-section-header {
     text-transform: uppercase;
-    font-family: Roboto Condensed, serif; 
+    font-family: Playfair Display, serif;
     font-weight: bold;
+    background-color: #333333;
 }
 
 .sidebar .sidebar-header {
-    background-color: #343a40;
+    background-color: #0a0a0a;
 }
 .sidebar .sidebar-header a {
     color: white;
 }
 .sidebar .sidebar-header a:hover {
     background-color: transparent;
-    color: rgba(255,255,255,0.8);
+    color: #333333;
 }
 
 .sidebar a,
@@ -156,15 +227,13 @@ main > .row {
     display: block;
     padding: 0.1em 1em;
 }
-
 .sidebar a {
     text-transform: uppercase;
-    font-family: Roboto Condensed, serif;
-    color: rgba(0,0,0,0.4);
+    font-family: Playfair Display, serif;
+    color: #65a8eb;
 }
 .sidebar a:hover {
-    color: #16181b;
-    background-color: #f8f9fa;
+    color: #63c7bf;
 }
 .sidebar a:hover, .sidebar a:active, .sidebar a:focus, .sidebar a:link {
     text-decoration: none;
@@ -174,7 +243,7 @@ main > .row {
 }
 .sidebar a.active, .sidebar a.active:hover {
     color: white;
-    background-color: #343a40;
+    background-color: #333333;
 }
 
 .site-mobile-header {
@@ -186,7 +255,7 @@ main > .row {
 	.site-mobile-header {
 		top: 54px !important;
     }
-    
+
     .timestamp {
 		margin-left: 1rem!important;
 		margin-right: 1rem!important;
@@ -196,6 +265,7 @@ main > .row {
 @media (max-width: 991px) {
     .site-header-image {
         display: none;
+        width: 100%;
     }
     .site-mobile-header {
         display: block;
@@ -222,7 +292,7 @@ main > .row {
         position: absolute;
         padding-left: 0px;
         text-align: left;
-        background-color: #ddd;
+        background-color: #333333;
         z-index: 3;
         right: 0px;
         bottom: 0px;
@@ -234,7 +304,7 @@ main > .row {
     }
     .sidebar.active {
         left: 0%;
-    } 
+    }
 
     .sidebar > ul {
         padding-top: 0px;
@@ -248,23 +318,23 @@ main > .row {
     }
 
     .sidebar ul li {
-        background-color: white;
+        background-color: #333333;
         border-radius: 0;
         margin-bottom: 1em;
         padding: 0.4em 0;
-        
+
         box-shadow: none;
     }
-	
+
 	/*fix for screen being over-wide on mobile*/
 	.row {
 		margin:0; max-width:100%;
 	}
-    
+
 	.container-fluid {
 		padding:0px;
 	}
-    
+
 	.site-footer .navbar .navbar-nav {
 		flex-wrap: wrap; justify-content: center;
 	}
@@ -274,6 +344,9 @@ main > .row {
 
 .site-footer {
     text-align: center;
+    background-color: #1c1c1c;
+    width: 100%;
+    bottom: 0;
 }
 
 .site-footer .navbar {
@@ -297,9 +370,9 @@ main > .row {
 }
 
 /**************************************************************************************************
-    
+
     Content
-    
+
 **************************************************************************************************/
 .modal-header {
     border-bottom: 0px;
@@ -309,7 +382,7 @@ main > .row {
 }
 
 .tooltip-inner {
-    max-width: 350px !important; 
+    max-width: 350px !important;
 }
 
 .nav-tabs .nav-link.active {
@@ -463,6 +536,7 @@ tr.outflow {
 /* PROFILE ***************************************************************************************/
 
 .profile-assets-card .card-body {
+    background-colour: #1c1c1c;
     display: flex;
     flex-direction: column;
 }
@@ -605,6 +679,11 @@ tr.accountbound {
     width: 100px;
 }
 
+
+@media (min-width: 768px) {
+    .fb-md-50 { flex-basis:50%; }
+}
+
 /* BOOTSTRAP TABLES *************************************************************************************/
 .ubt-bottom {
   border-bottom:1px solid #dee2e6;
@@ -625,11 +704,166 @@ tr.accountbound {
 }
 
 /* COMMENTS *************************************************************************************/
-.comment_replies {
-        padding-left: 3rem;
-        border-left-width: 2px!important;
+.comment_container {
+    background-color: #333333;
+    border: 3px solid #333333;
+}
+
+.comment_top {
+    padding-top: 3rem;
+    padding-right: 3rem;
+    padding-left: 3rem;
+}
+
+.comment_top a {
+    color: #a84c39;
+}
+
+.comment_heading {
+    padding-left: 0.5rem;
+    position: relative;
+}
+
+.comment_heading::after {
+    content: '';
+    background: linear-gradient(to right, #fff 0%, transparent 45%);
+    height: 2px;
+    width: 100%;
+
+    position: absolute;
+    bottom: -0.25rem;
+    left: 0;
+}
+
+.comment_textbox {
+    background-color: rgba(0,0,0, 0.35);
+    border-color: rgba(255, 255, 255, 0.55);
+}
+
+.comment_textbox:focus {
+    border-color: rgba(255, 255, 255, 0.75);
+    box-shadow: 0 0 0 0.2rem rgba(118, 49, 35, 0.55);
+}
+
+.comment_submit {
+    background-color: rgba(118, 49, 35, 0.35);
+    border: 1px solid #763123;
+    border-radius: 0;
+    color: #fff;
+    font-family: 'Playfair Display', serif;
+    font-size: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.comment_submit:hover, .comment_submit:active {
+    background-color: rgba(118, 49, 35, 0.85);
+}
+
+.comment_divider {
+    background: linear-gradient(to right, transparent 2%, #fff 2.1%, transparent 100%);
+    height: 3px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+.comment_comments {
+    background-color: #282828;
+    border: 1px solid #fff;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding: 1rem 2rem;
+}
+
+.comment_comments h5 a {
+    color: #fff;
+}
+
+.comment_comment {
+    background-color: #1D1D1D;
+}
+
+@media (max-width: 991px) {
+    .comment_comments {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        padding: 1rem 0.5rem;
     }
-    
+
+    .comment_comment {
+        word-break: break-word;
+        max-width: 100%;
+    }
+}
+
+.comment_comment.featured {
+    background-color: #181717;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+}
+
+.comment_content {
+    min-height: 50px;
+    font-family: 'Playfair Display', serif;
+    font-size: 0.9rem;
+}
+
+.comment_options {
+    background-color: transparent;
+    color: rgba(255, 255, 255, 0.55);
+    font-family: 'Playfair Display', serif;
+    font-size: 0.9em;
+    padding: 0;
+}
+
+.comment_options:focus {
+    box-shadow: 0 0 0 0.2rem rgba(118, 49, 35, 0.55);
+}
+
+.comment_options:hover, .comment_options:active {
+    color: #fff;
+}
+
+.comment_replies {
+    padding-left: 2rem;
+    position: relative;
+}
+
+.comment_replies::before {
+    content: '';
+    background: linear-gradient(to bottom, transparent 0%, #fff 25%, #fff 75%, transparent 100%);
+    width: 2px;
+
+    position: absolute;
+    left: 10px;
+    top: 0;
+    bottom: 0;
+}
+
+.comment_replies::after {
+    content: '';
+    background: linear-gradient(to right, #fff 0%, transparent 100%);
+    height: 2px;
+    width: 2%;
+
+    position: absolute;
+    left: 10px;
+    top: 50%;
+}
+
+.comment_more {
+    background-color: #1D1D1D;
+    border-radius: 50px;
+    color: rgba(255, 255, 255, 0.55);
+    font-family: 'Playfair Display', serif;
+    text-transform: uppercase;
+}
+
+.comment_more:hover {
+    background-color: #181717;
+    color: rgba(255, 255, 255, 0.85);
+}
+
 @media only screen and (max-width: 600px) {
     .comment_replies { padding-left:1rem;}
 }
