refactor(banners): refactoring some code & adding validation
- Adding validation to styling so only valid values are able to be submitted.
- Giving the banner widget a class of user-banner and defining the min-height in lorekeeper.css instead.
- Moving the JS in settings page to the scripts section, as well as renaming the numerical type to two value instead given that keywords are also allowed to be used.
- Fixing small bug in user model where the wrong data was being passed for banner size.

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -534,6 +534,10 @@ tr.outflow {
     background-color: white;
 }
 
+.user-banner {
+    min-height: 150px;
+}
+
 /* INVENTORY *************************************************************************************/
 
 .inventory-category .inventory-body .inventory-item img {
